Make sure top edges of columns are properly aligned

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -441,6 +441,11 @@ button:focus,
   margin-left: 2.5%;
 }
 
+.column > :first-child
+{
+  margin-top: 0;
+}
+
 .one-sidebar .column
 {
   width: 74.375%;
